--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <div class="supercont">
-        <div class="screen">
-             
-        </div>
+        <input class="screen" readonly></input>
         <div class="buttons">
                 <button onclick ="clearscreen()"class="btn">CE</button>
                 <button onclick="appendDisplay('1')" class="btn">1</button>
