--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button onclick="appendDisplay('-')" class="btn">-</button>
                 <button onclick="appendDisplay('*')" class="btn">*</button>
                 <button onclick="appendDisplay('/')" class="btn">/</button>
-                <button onclick="evaluate()" class="btn">=</button>
+                <button onclick="evaluateExpression()" class="btn">=</button>
         </div>
     </div>
     <script src = "index.js"></script>
